--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: ci
 
 on:
   workflow_call:
+    secrets:
+      NPM_TOKEN:
+        required: false
+      RELEASE_TOKEN:
+        required: false
 
 jobs:
   detect:
