--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,11 @@ name: Release
 
 on:
   workflow_call:
+    secrets:
+      NPM_TOKEN:
+        required: true
+      RELEASE_TOKEN:
+        required: true
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
