--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,16 +42,19 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Skip if template
+        id: skipcheck
         run: |
           if grep -q "@<your-scope>/<name>" package.json; then
-            echo "Template placeholder detected — skipping validate."
-            exit 0
+            echo "Template placeholder detected — skipping release validation."
+            echo "skip=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Validate
+        if: ${{ steps.skipcheck.outputs.skip != 'true' }}
         run: pnpm -w validate
 
       - name: Create Release PR or Publish to npm
+        if: ${{ steps.skipcheck.outputs.skip != 'true' && success() }}
         uses: changesets/action@v1
         with:
           publish: pnpm -w changeset publish --access public
